...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <Spinner
        android:id="@+id/addTaskEnumOwnerTypeSpinner"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="add_task_owner"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskEnumTypeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addTaskTitle"
        android:layout_width="120dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="44dp"
        android:text="@string/add_task3"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskETTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextSizeCheck" />
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/AddTaskEDTitle"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
...
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskETTitle"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/add_task_activity_button"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginTop="66dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
