<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <Button
        android:id="@+id/userSettingsSaveButton2"
...
        android:layout_marginBottom="136dp"
        android:contentDescription="Logout"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/userSettingsLoginButton" />

    <EditText
        android:id="@+id/userNameActivityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
...
